fix gh ribbon overlap on tablet portrait mode

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -240,7 +240,7 @@ iframe {
     max-width: 80vw !important;
   }
   #ribbon {
-    zoom: 0.75 !important;
+    zoom: 0.66 !important;
   }
   .swiper-pagination {
     zoom: 1.25;
